tests/integration/snapshots/integration__conformance__y_string_pi.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["π"]
stdout ---
[
  "π"
]

stderr ---
