tests/integration/snapshots/integration__conformance__y_string_reservedcharacterinutf-8_u+1bfff.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["𛿿"]
stdout ---
["𛿿"]

stderr ---
