tests/integration/snapshots/integration__conformance__y_string_reservedcharacterinutf-8_u+1bfff.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
["𛿿"]
stdout ---
["𛿿"]

stderr ---
