tests/integration/snapshots/integration__conformance__y_string_simple_ascii.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["asd "]
stdout ---
[
  "asd "
]

stderr ---
