tests/integration/snapshots/integration__conformance__y_string_surrogates_u+1d11e_musical_symbol_g_clef.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\uD834\uDd1e"]
stdout ---
["\uD834\uDd1e"]

stderr ---
